kubernetes/apps/audiobookshelf/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf-prod
  labels:
    app.kubernetes.io/name: audiobookshelf
    environment: production
    team: timour
  annotations:
    argocd.argoproj.io/sync-wave: "10"
