kubernetes/apps/audiobookshelf/overlays/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - audiobookshelf.timourhomelab.org
  rules:
    - backendRefs:
        - name: audiobookshelf
          port: 80
